<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/edit_back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="#00FFFFFF"
        android:onClick="GoBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/edit_title"
        android:textColor="@color/text_black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/edit_back_button"
        app:layout_constraintTop_toTopOf="@+id/edit_back_button" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginStart="88dp"
        android:background="@drawable/round_button"
        android:onClick="SaveChanges"
        app:layout_constraintStart_toEndOf="@+id/edit_title"
        app:layout_constraintTop_toTopOf="@+id/edit_title"
        app:srcCompat="@drawable/ic_baseline_done_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/name_of_card"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/edit_back_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_back_button" />

    <EditText
        android:id="@+id/editTextPassName"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_title"
        app:layout_constraintStart_toStartOf="@+id/edit_back_button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/delete_pass_button"
        android:layout_width="152dp"
        android:layout_height="49dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="#DDDDDD"
        android:background="@drawable/delete_button"
        android:onClick="ShowDialog"
        android:text="@string/delete"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>