<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/pass_back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/pass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Пропуск"
        android:textColor="@color/text_black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/pass_back_button"
        app:layout_constraintTop_toTopOf="@+id/pass_back_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="328dp"
        android:layout_height="208dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/pass_card"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_back_button">

        <TextView
            android:id="@+id/pass_card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/pass_card_title"
            android:textColor="@color/text_black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/edit_pass_button"
            android:layout_width="138dp"
            android:layout_height="40dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="#0000"
            android:onClick="OpenEditPass"
            android:textAllCaps="false"
            android:text="@string/edit_pass"
            android:textColor="@color/pale_blue"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_wifi_24" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="14dp"
            android:layout_height="match_parent"
            android:background="@drawable/round_rail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/phone_image"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="72dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/phone" />

    <TextView
        android:id="@+id/turn_your_phone"
        android:layout_width="262dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:text="@string/turn_your_phone"
        android:textAlignment="center"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_image" />

</androidx.constraintlayout.widget.ConstraintLayout>